Fixed section 2 ro 2 alignment

--- a/resources/style.css
+++ b/resources/style.css
@@ -230,9 +230,7 @@ h2:after {
 .row-2 {
   display: flex;
   justify-content: center;
-}
-
-.block-1 {
+  margin: 1% 0 1% 1.6%;
 }
 
 .block h3 {
@@ -253,5 +251,12 @@ h3 {
 }
 
 .block {
-  flex-shrink: 1;
+  padding: 1%;
+  width: 23.8%;
+}
+
+.block-1 {
+  /* flex-grow: 1; */
+  /* margin-left: 0; */
+  /* flex-grow: 2; */
 }
